fix: replace deprecated wrapper constructors and Locale API across web module
Replace new Integer(), new Boolean(), new Double(), new Float(), new Character(), new Locale() with their valueOf()/of() counterparts.

Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-openagent)

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>