@@ -63,7 +63,7 @@ public class AuditLogUserServlet extends SecureController {
             Integer userIntId = (Integer) session.getAttribute(ARG_USERID);
             userId = userIntId.intValue();
         } else {
-            session.setAttribute(ARG_USERID, new Integer(userId));
+            session.setAttribute(ARG_USERID, Integer.valueOf(userId));
         }
         IAuditEventDAO aeDAO = this.auditEventDao;
         ArrayList al = aeDAO.findAllByUserId(userId);
