@@ -137,7 +137,7 @@ public class EditStudyUserRoleServlet extends SecureController {
                 request.setAttribute("userName", uName);
                 request.setAttribute("studyUserRole", studyUserRole);
                 request.setAttribute("roles", roleMap);
-                request.setAttribute("chosenRoleId", new Integer(studyUserRole.getRole().getId()));
+                request.setAttribute("chosenRoleId", Integer.valueOf(studyUserRole.getRole().getId()));
                 forwardPage(Page.EDIT_STUDY_USER_ROLE);
             }
 
@@ -164,7 +164,7 @@ public class EditStudyUserRoleServlet extends SecureController {
 
                     request.setAttribute("userName", uName);
                     request.setAttribute("studyUserRole", studyUserRole);
-                    request.setAttribute("chosenRoleId", new Integer(fp.getInt(INPUT_ROLE)));
+                    request.setAttribute("chosenRoleId", Integer.valueOf(fp.getInt(INPUT_ROLE)));
                     request.setAttribute("roles", roleMap);
                     forwardPage(Page.EDIT_STUDY_USER_ROLE);
                 }
