@@ -178,8 +178,8 @@ public abstract class ListStudySubjectServlet extends SecureController {
 
         // information for the event tabs
         session.setAttribute("allDefsArray", allDefs);
-        session.setAttribute("allDefsNumber", new Integer(allDefs.size()));
-        session.setAttribute("groupSize", new Integer(studyGroupClasses.size()));
+        session.setAttribute("allDefsNumber", Integer.valueOf(allDefs.size()));
+        session.setAttribute("groupSize", Integer.valueOf(studyGroupClasses.size()));
 
         // find all the subjects in current study
         ArrayList subjects = sdao.findAllByStudyId(currentStudy.getId());
