@@ -271,7 +271,7 @@ public class SignStudySubjectServlet extends SecureController {
                     return;
                 }
             } else {
-                request.setAttribute("id", new Integer(studySubId).toString());
+                request.setAttribute("id", Integer.valueOf(studySubId).toString());
                 addPageMessage(restext.getString("password_match"));
                 forwardPage(Page.LIST_STUDY_SUBJECTS);
                 return;
@@ -290,7 +290,7 @@ public class SignStudySubjectServlet extends SecureController {
                 Calendar cal = Calendar.getInstance();
                 cal.setTime(dob);
                 int year = cal.get(Calendar.YEAR);
-                request.setAttribute("yearOfBirth", new Integer(year));
+                request.setAttribute("yearOfBirth", Integer.valueOf(year));
             } else {
                 request.setAttribute("yearOfBirth", "");
             }
@@ -359,7 +359,7 @@ public class SignStudySubjectServlet extends SecureController {
         }
 
         HashMap args = new HashMap();
-        args.put("id", new Integer(studySubId).toString());
+        args.put("id", Integer.valueOf(studySubId).toString());
         table.setQuery("ViewStudySubject", args);
         table.setRows(allEventRows);
         table.computeDisplay();
@@ -385,12 +385,12 @@ public class SignStudySubjectServlet extends SecureController {
             String old = avb.getOldValue().trim();
             try {
                 if (!StringUtil.isBlank(old)) {
-                    SubjectEventStatus oldStatus = SubjectEventStatus.get(new Integer(old).intValue());
+                    SubjectEventStatus oldStatus = SubjectEventStatus.get(Integer.valueOf(old).intValue());
                     sea.setOldSubjectEventStatus(oldStatus);
                 }
                 String newValue = avb.getNewValue().trim();
                 if (!StringUtil.isBlank(newValue)) {
-                    SubjectEventStatus newStatus = SubjectEventStatus.get(new Integer(newValue).intValue());
+                    SubjectEventStatus newStatus = SubjectEventStatus.get(Integer.valueOf(newValue).intValue());
                     sea.setNewSubjectEventStatus(newStatus);
                 }
             } catch (NumberFormatException e) {
@@ -530,8 +530,8 @@ public class SignStudySubjectServlet extends SecureController {
 
         for (i = 0; i < eventDefinitionCRFs.size(); i++) {
             EventDefinitionCRFBean edcrf = (EventDefinitionCRFBean) eventDefinitionCRFs.get(i);
-            completed.put(new Integer(edcrf.getCrfId()), Boolean.FALSE);
-            startedButIncompleted.put(new Integer(edcrf.getCrfId()), new EventCRFBean());
+            completed.put(Integer.valueOf(edcrf.getCrfId()), Boolean.FALSE);
+            startedButIncompleted.put(Integer.valueOf(edcrf.getCrfId()), new EventCRFBean());
         }
 
         CRFVersionDAO cvdao = DaoProvider.getDao(CRFVersionDAO.class);
@@ -541,9 +541,9 @@ public class SignStudySubjectServlet extends SecureController {
             int crfId = cvdao.getCRFIdFromCRFVersionId(ecrf.getCRFVersionId());
             ArrayList idata = iddao.findAllByEventCRFId(ecrf.getId());
             if (!idata.isEmpty()) {// this crf has data already
-                completed.put(new Integer(crfId), Boolean.TRUE);
+                completed.put(Integer.valueOf(crfId), Boolean.TRUE);
             } else {// event crf got created, but no data entered
-                startedButIncompleted.put(new Integer(crfId), ecrf);
+                startedButIncompleted.put(Integer.valueOf(crfId), ecrf);
             }
         }
 
@@ -562,8 +562,8 @@ public class SignStudySubjectServlet extends SecureController {
             if (status.equals(SubjectEventStatus.LOCKED)) {
                 dedc.setStatus(Status.LOCKED);
             }
-            Boolean b = (Boolean) completed.get(new Integer(edcrf.getCrfId()));
-            EventCRFBean ev = (EventCRFBean) startedButIncompleted.get(new Integer(edcrf.getCrfId()));
+            Boolean b = (Boolean) completed.get(Integer.valueOf(edcrf.getCrfId()));
+            EventCRFBean ev = (EventCRFBean) startedButIncompleted.get(Integer.valueOf(edcrf.getCrfId()));
             if (b == null || !b.booleanValue()) {
 
                 // System.out.println("entered boolean loop with ev
