@@ -142,7 +142,7 @@ public static final String EVENT_ID = "event_id";
 
         if (studyEventId == 0 || studySubjectId == 0) {
             addPageMessage(respage.getString("choose_a_study_event_to_edit"));
-            request.setAttribute("id", new Integer(studySubjectId).toString());
+            request.setAttribute("id", Integer.valueOf(studySubjectId).toString());
             forwardPage(Page.VIEW_STUDY_SUBJECT_SERVLET);
             return;
         }
@@ -165,12 +165,12 @@ public static final String EVENT_ID = "event_id";
         if ("removed".equalsIgnoreCase(s.getName()) || "auto-removed".equalsIgnoreCase(s.getName())) {
             addPageMessage(resword.getString("study_event") + resterm.getString("could_not_be") + resterm.getString("updated") + "."
                 + respage.getString("study_subject_has_been_deleted"));
-            request.setAttribute("id", new Integer(studySubjectId).toString());
+            request.setAttribute("id", Integer.valueOf(studySubjectId).toString());
             forwardPage(Page.VIEW_STUDY_SUBJECT_SERVLET);
         }
         // YW
 
-        request.setAttribute(STUDY_SUBJECT_ID, new Integer(studySubjectId).toString());
+        request.setAttribute(STUDY_SUBJECT_ID, Integer.valueOf(studySubjectId).toString());
         IStudyEventDAO sedao = this.studyEventDao;
         EventCRFDao ecrfdao = this.eventCrfDao;
 
@@ -398,7 +398,7 @@ public static final String EVENT_ID = "event_id";
             } else if (studyEvent.getSubjectEventStatus().isSigned()) {
                 // Checks if the status is signed
                 // -----------------
-                request.setAttribute(STUDY_SUBJECT_ID, new Integer(studySubjectId).toString());
+                request.setAttribute(STUDY_SUBJECT_ID, Integer.valueOf(studySubjectId).toString());
                 if (fp.getString(INPUT_STARTDATE_PREFIX + "Hour").equals("-1") && fp.getString(INPUT_STARTDATE_PREFIX + "Minute").equals("-1")
                     && fp.getString(INPUT_STARTDATE_PREFIX + "Half").equals("")) {
                     studyEvent.setStartTimeFlag(false);
@@ -508,7 +508,7 @@ public static final String EVENT_ID = "event_id";
          //       getRuleSetService().runRulesInBeanProperty(createRuleSet(ssub,sed),currentStudy,ub,request,ssub);
                 
                 addPageMessage(respage.getString("study_event_updated"));
-                request.setAttribute("id", new Integer(studySubjectId).toString());
+                request.setAttribute("id", Integer.valueOf(studySubjectId).toString());
                 session.removeAttribute(AddNewSubjectServlet.FORM_DISCREPANCY_NOTES_NAME);
                 forwardPage(Page.VIEW_STUDY_SUBJECT_SERVLET);
                 // FORWARD SHOULD BE TO THE NEW PAGE
@@ -553,11 +553,11 @@ public static final String EVENT_ID = "event_id";
                 AddNewSubjectServlet.saveFieldNotes(INPUT_ENDDATE_PREFIX, fdn, dndao, studyEvent.getId(), "studyEvent", currentStudy);
 
                 session.removeAttribute("eventSigned");
-                request.setAttribute("id", new Integer(studySubjectId).toString());
+                request.setAttribute("id", Integer.valueOf(studySubjectId).toString());
                 addPageMessage(respage.getString("study_event_updated"));
                 forwardPage(Page.VIEW_STUDY_SUBJECT_SERVLET);
             } else {
-                request.setAttribute(STUDY_SUBJECT_ID, new Integer(studySubjectId).toString());
+                request.setAttribute(STUDY_SUBJECT_ID, Integer.valueOf(studySubjectId).toString());
                 request.setAttribute("studyEvent", seb);
                 // -------------------
                 ssdao = this.studySubjectDao;
@@ -622,8 +622,8 @@ public static final String EVENT_ID = "event_id";
             if (studyEvent.getStartTimeFlag() == true) {
                 Calendar c = new GregorianCalendar();
                 c.setTime(studyEvent.getDateStarted());
-                presetValues.put(INPUT_STARTDATE_PREFIX + "Hour", new Integer(c.get(Calendar.HOUR_OF_DAY)));
-                presetValues.put(INPUT_STARTDATE_PREFIX + "Minute", new Integer(c.get(Calendar.MINUTE)));
+                presetValues.put(INPUT_STARTDATE_PREFIX + "Hour", Integer.valueOf(c.get(Calendar.HOUR_OF_DAY)));
+                presetValues.put(INPUT_STARTDATE_PREFIX + "Minute", Integer.valueOf(c.get(Calendar.MINUTE)));
                 // Later it could be put to somewhere as a static method if
                 // necessary.
                 switch (c.get(Calendar.AM_PM)) {
@@ -638,8 +638,8 @@ public static final String EVENT_ID = "event_id";
                     break;
                 }
             } else {
-                presetValues.put(INPUT_STARTDATE_PREFIX + "Hour", new Integer(-1));
-                presetValues.put(INPUT_STARTDATE_PREFIX + "Minute", new Integer(-1));
+                presetValues.put(INPUT_STARTDATE_PREFIX + "Hour", Integer.valueOf(-1));
+                presetValues.put(INPUT_STARTDATE_PREFIX + "Minute", Integer.valueOf(-1));
                 presetValues.put(INPUT_STARTDATE_PREFIX + "Half", "");
             }
             // YW >>
@@ -648,15 +648,15 @@ public static final String EVENT_ID = "event_id";
             presetValues.put(INPUT_STARTDATE_PREFIX + "Date", dateValue);
 
             // YW 3-12-2008, add end datetime for 2220 fix<<
-            presetValues.put(INPUT_ENDDATE_PREFIX + "Hour", new Integer(-1));
-            presetValues.put(INPUT_ENDDATE_PREFIX + "Minute", new Integer(-1));
+            presetValues.put(INPUT_ENDDATE_PREFIX + "Hour", Integer.valueOf(-1));
+            presetValues.put(INPUT_ENDDATE_PREFIX + "Minute", Integer.valueOf(-1));
             presetValues.put(INPUT_ENDDATE_PREFIX + "Half", "");
             if (studyEvent.getDateEnded() != null) {
                 if (studyEvent.getEndTimeFlag() == true) {
                     Calendar c = new GregorianCalendar();
                     c.setTime(studyEvent.getDateEnded());
-                    presetValues.put(INPUT_ENDDATE_PREFIX + "Hour", new Integer(c.get(Calendar.HOUR_OF_DAY)));
-                    presetValues.put(INPUT_ENDDATE_PREFIX + "Minute", new Integer(c.get(Calendar.MINUTE)));
+                    presetValues.put(INPUT_ENDDATE_PREFIX + "Hour", Integer.valueOf(c.get(Calendar.HOUR_OF_DAY)));
+                    presetValues.put(INPUT_ENDDATE_PREFIX + "Minute", Integer.valueOf(c.get(Calendar.MINUTE)));
                     // Later it could be put to somewhere as a static method if
                     // necessary.
                     switch (c.get(Calendar.AM_PM)) {
@@ -726,8 +726,8 @@ public static final String EVENT_ID = "event_id";
 
         for (i = 0; i < eventDefinitionCRFs.size(); i++) {
             EventDefinitionCRFBean edcrf = (EventDefinitionCRFBean) eventDefinitionCRFs.get(i);
-            completed.put(new Integer(edcrf.getCrfId()), Boolean.FALSE);
-            startedButIncompleted.put(new Integer(edcrf.getCrfId()), new EventCRFBean());
+            completed.put(Integer.valueOf(edcrf.getCrfId()), Boolean.FALSE);
+            startedButIncompleted.put(Integer.valueOf(edcrf.getCrfId()), new EventCRFBean());
         }
 
         CRFVersionDAO cvdao = this.crfVersionDao;
@@ -737,9 +737,9 @@ public static final String EVENT_ID = "event_id";
             int crfId = cvdao.getCRFIdFromCRFVersionId(ecrf.getCRFVersionId());
             ArrayList idata = iddao.findAllByEventCRFId(ecrf.getId());
             if (!idata.isEmpty()) {// this crf has data already
-                completed.put(new Integer(crfId), Boolean.TRUE);
+                completed.put(Integer.valueOf(crfId), Boolean.TRUE);
             } else {// event crf got created, but no data entered
-                startedButIncompleted.put(new Integer(crfId), ecrf);
+                startedButIncompleted.put(Integer.valueOf(crfId), ecrf);
             }
         }
 
@@ -747,8 +747,8 @@ public static final String EVENT_ID = "event_id";
             DisplayEventDefinitionCRFBean dedc = new DisplayEventDefinitionCRFBean();
             EventDefinitionCRFBean edcrf = (EventDefinitionCRFBean) eventDefinitionCRFs.get(i);
             dedc.setEdc(edcrf);
-            Boolean b = (Boolean) completed.get(new Integer(edcrf.getCrfId()));
-            EventCRFBean ev = (EventCRFBean) startedButIncompleted.get(new Integer(edcrf.getCrfId()));
+            Boolean b = (Boolean) completed.get(Integer.valueOf(edcrf.getCrfId()));
+            EventCRFBean ev = (EventCRFBean) startedButIncompleted.get(Integer.valueOf(edcrf.getCrfId()));
             if (b == null || !b.booleanValue()) {
                 dedc.setEventCRF(ev);
                 answer.add(dedc);
