@@ -137,7 +137,7 @@ EventDefinitionCrfTagService eventDefinitionCrfTagService = null;
             
             request.setAttribute("definition", sed);
             request.setAttribute("eventDefinitionCRFs", eventDefinitionCRFs);
-            request.setAttribute("defSize", new Integer(eventDefinitionCRFs.size()));
+            request.setAttribute("defSize", Integer.valueOf(eventDefinitionCRFs.size()));
             // request.setAttribute("eventDefinitionCRFs", new
             // ArrayList(tm.values()));
             forwardPage(Page.VIEW_EVENT_DEFINITION);
