@@ -135,7 +135,7 @@ public class AccountController {
             return new ResponseEntity<HashMap>(new HashMap(), org.springframework.http.HttpStatus.UNAUTHORIZED);
         }
 
-        ResourceBundleProvider.updateLocale(new Locale("en_US"));
+        ResourceBundleProvider.updateLocale(Locale.of("en_US"));
         IUserAccountDAO userAccountDAO = this.userAccountDao;
         IStudyDAO studyDAO = this.studyDao;
         HashMap<String, Object> userDTO = new HashMap<String, Object>();
@@ -196,7 +196,7 @@ public class AccountController {
 
     @RequestMapping(value = "/study/{studyOid}/crc/{crcUserName}", method = RequestMethod.GET)
     public ResponseEntity<UserDTO> getAccount1(@PathVariable("studyOid") String studyOid, @PathVariable("crcUserName") String crcUserName) throws Exception {
-        ResourceBundleProvider.updateLocale(new Locale("en_US"));
+        ResourceBundleProvider.updateLocale(Locale.of("en_US"));
         IUserAccountDAO udao = this.userAccountDao;
         uDTO = null;
 
@@ -266,7 +266,7 @@ public class AccountController {
 
     @RequestMapping(value = "/study/{studyOid}/accesscode/{accessCode}", method = RequestMethod.GET)
     public ResponseEntity<UserDTO> getAccount2(@PathVariable("studyOid") String studyOid, @PathVariable("accessCode") String accessCode) throws Exception {
-        ResourceBundleProvider.updateLocale(new Locale("en_US"));
+        ResourceBundleProvider.updateLocale(Locale.of("en_US"));
         uDTO = null;
 
         accessCode = URLDecoder.decode(accessCode, "UTF-8");
@@ -341,7 +341,7 @@ public class AccountController {
     @RequestMapping(value = "/study/{studyOid}/studysubject/{studySubjectId}", method = RequestMethod.GET)
     public ResponseEntity<UserDTO> getAccount3(@PathVariable("studyOid") String studyOid, @PathVariable("studySubjectId") String studySubjectId)
             throws Exception {
-        ResourceBundleProvider.updateLocale(new Locale("en_US"));
+        ResourceBundleProvider.updateLocale(Locale.of("en_US"));
         uDTO = null;
 
         StudyBean parentStudy = getParentStudy(studyOid);
@@ -470,7 +470,7 @@ public class AccountController {
         String crcUserName = map.get("crcUserName");
         String email = map.get("email");
 
-        ResourceBundleProvider.updateLocale(new Locale("en_US"));
+        ResourceBundleProvider.updateLocale(Locale.of("en_US"));
 
         UserAccountBean uBean = null;
 
@@ -562,7 +562,7 @@ public class AccountController {
         String studySubjectId = map.get("studySubjectId");
         String timeZone = map.get("timeZone");
 
-        ResourceBundleProvider.updateLocale(new Locale("en_US"));
+        ResourceBundleProvider.updateLocale(Locale.of("en_US"));
         IUserAccountDAO udao = this.userAccountDao;
 
         StudySubjectBean studySubjectBean = getStudySubjectByOidAndStudy(studySubjectId, parentStudy.getId());
@@ -930,7 +930,7 @@ public class AccountController {
 
     @RequestMapping(value = "/study/{studyOid}", method = RequestMethod.GET)
     public ResponseEntity<ArrayList<UserDTO>> getAllParticipantPerStudy(@PathVariable("studyOid") String studyOid) throws Exception {
-        ResourceBundleProvider.updateLocale(new Locale("en_US"));
+        ResourceBundleProvider.updateLocale(Locale.of("en_US"));
         IUserAccountDAO udao = this.userAccountDao;
         ArrayList<UserDTO> uDTOs = null;
 
@@ -984,7 +984,7 @@ public class AccountController {
         String crcUserName = map.get("crcUserName");
         String email = map.get("email");
 
-        ResourceBundleProvider.updateLocale(new Locale("en_US"));
+        ResourceBundleProvider.updateLocale(Locale.of("en_US"));
 
         UserAccountBean uBean = null;
 
