@@ -94,7 +94,7 @@ public class DiscrepancyNoteController {
 
 	@RequestMapping(value = "/dnote", method = RequestMethod.POST)
 	public ResponseEntity buidDiscrepancyNote(@RequestBody HashMap<String, String> map, HttpServletRequest request) throws Exception {
-		ResourceBundleProvider.updateLocale(new Locale("en_US"));
+		ResourceBundleProvider.updateLocale(Locale.of("en_US"));
 		System.out.println("I'm in EnketoForm DN Rest Method");
 		org.springframework.http.HttpStatus httpStatus = null;
 
