@@ -235,7 +235,7 @@ public class RuleController {
 
     @RequestMapping(value = "/studies/{study}/metadata", method = RequestMethod.GET)
     public ModelAndView studyMetadata(Model model, HttpSession session, @PathVariable("study") String studyOid, HttpServletResponse response) throws Exception {
-        ResourceBundleProvider.updateLocale(new Locale("en_US"));
+        ResourceBundleProvider.updateLocale(Locale.of("en_US"));
         StudyBean currentStudy = (StudyBean) session.getAttribute("study");
         UserAccountBean userAccount = (UserAccountBean) session.getAttribute("userBean");
 
@@ -327,7 +327,7 @@ public class RuleController {
     public @ResponseBody
     org.openclinica.ns.response.v31.Response create(@RequestBody org.openclinica.ns.response.v31.Response responeType, Model model, HttpSession session,
             @PathVariable("study") String studyOid) throws Exception {
-        ResourceBundleProvider.updateLocale(new Locale("en_US"));
+        ResourceBundleProvider.updateLocale(Locale.of("en_US"));
         IStudyDAO studyDao = this.studyDao;
         StudyBean currentStudy = studyDao.findByOid(studyOid);
 
@@ -348,7 +348,7 @@ public class RuleController {
     public @ResponseBody
     Response create(@RequestBody org.openclinica.ns.rules.v31.Rules rules, Model model, HttpSession session, @PathVariable("study") String studyOid)
             throws Exception {
-        ResourceBundleProvider.updateLocale(new Locale("en_US"));
+        ResourceBundleProvider.updateLocale(Locale.of("en_US"));
         RulesPostImportContainer rpic = mapRulesToRulesPostImportContainer(rules);
         IStudyDAO studyDao = this.studyDao;
         StudyBean currentStudy = studyDao.findByOid(studyOid);
@@ -386,7 +386,7 @@ public class RuleController {
     public @ResponseBody
     Response validateAndSave(@RequestBody org.openclinica.ns.rules.v31.Rules rules, Model model, HttpSession session, @PathVariable("study") String studyOid,
             @RequestParam("ignoreDuplicates") Boolean ignoreDuplicates) throws Exception {
-        ResourceBundleProvider.updateLocale(new Locale("en_US"));
+        ResourceBundleProvider.updateLocale(Locale.of("en_US"));
         RulesPostImportContainer rpic = mapRulesToRulesPostImportContainer(rules);
         IStudyDAO studyDao = this.studyDao;
         StudyBean currentStudy = studyDao.findByOid(studyOid);
@@ -433,7 +433,7 @@ public class RuleController {
     public @ResponseBody
     org.openclinica.ns.rules_test.v31.RulesTest create(@RequestBody org.openclinica.ns.rules_test.v31.RulesTest ruleTest, Model model, HttpSession session,
             @PathVariable("study") String studyOid) throws Exception {
-        ResourceBundleProvider.updateLocale(new Locale("en_US"));
+        ResourceBundleProvider.updateLocale(Locale.of("en_US"));
         RulesPostImportContainer rpic = mapRulesToRulesPostImportContainer(ruleTest.getRules());
         IStudyDAO studyDao = this.studyDao;
         StudyBean currentStudy = studyDao.findByOid(studyOid);
@@ -552,7 +552,7 @@ public class RuleController {
 
     // TODO: fix locale
     public RulesPostImportContainerService getRulePostImportContainerService(StudyBean currentStudy, UserAccountBean userAccount) {
-        Locale l = new Locale("en_US");
+        Locale l = Locale.of("en_US");
         this.rulesPostImportContainerService.setCurrentStudy(currentStudy);
         this.rulesPostImportContainerService.setRespage(ResourceBundleProvider.getPageMessagesBundle(l));
         this.rulesPostImportContainerService.setUserAccount(userAccount);
