@@ -97,7 +97,7 @@ public class SystemController {
 
     @RequestMapping(value = "/systemstatus", method = RequestMethod.POST)
     public ResponseEntity<HashMap> getSystemStatus() throws Exception {
-        ResourceBundleProvider.updateLocale(new Locale("en_US"));
+        ResourceBundleProvider.updateLocale(Locale.of("en_US"));
         HashMap<String, String> map = new HashMap<>();
 
         map.put("OpenClinica Version", CoreResources.getField("OpenClinica.version"));
@@ -171,7 +171,7 @@ public class SystemController {
 
     @RequestMapping(value = "/config", method = RequestMethod.GET)
     public ResponseEntity<HashMap> getConfig() throws Exception {
-        ResourceBundleProvider.updateLocale(new Locale("en_US"));
+        ResourceBundleProvider.updateLocale(Locale.of("en_US"));
         HashMap<String, Object> map = new HashMap<>();
         HashMap<String, Object> ocVersion = new HashMap<>();
 
@@ -332,7 +332,7 @@ public class SystemController {
      */
     @RequestMapping(value = "/extract", method = RequestMethod.GET)
     public ResponseEntity<HashMap> getExtractModule() throws Exception {
-        ResourceBundleProvider.updateLocale(new Locale("en_US"));
+        ResourceBundleProvider.updateLocale(Locale.of("en_US"));
         HashMap<String, Object> map = new HashMap<>();
 
         ResourceBundle resLicense = ResourceBundleProvider.getLicensingBundle();
@@ -470,7 +470,7 @@ public class SystemController {
 
     @RequestMapping(value = "/modules", method = RequestMethod.GET)
     public ResponseEntity<ArrayList<HashMap<String, Object>>> getAllModules(HttpServletRequest request) throws Exception {
-        ResourceBundleProvider.updateLocale(new Locale("en_US"));
+        ResourceBundleProvider.updateLocale(Locale.of("en_US"));
         HashMap<String, Object> map = new HashMap<>();
         ArrayList<HashMap<String, Object>> studyListMap = new ArrayList();
 
@@ -538,7 +538,7 @@ public class SystemController {
 
     @RequestMapping(value = "/modules/participate", method = RequestMethod.GET)
     public ResponseEntity<ArrayList<HashMap<String, Object>>> getParticipateModule() throws Exception {
-        ResourceBundleProvider.updateLocale(new Locale("en_US"));
+        ResourceBundleProvider.updateLocale(Locale.of("en_US"));
         ArrayList<HashMap<String, Object>> studyListMap = new ArrayList();
 
         ArrayList<StudyBean> studyList = getStudyList();
@@ -577,7 +577,7 @@ public class SystemController {
 
     @RequestMapping(value = "/modules/randomize", method = RequestMethod.GET)
     public ResponseEntity<ArrayList<HashMap<String, Object>>> getRandomizeModule() throws Exception {
-        ResourceBundleProvider.updateLocale(new Locale("en_US"));
+        ResourceBundleProvider.updateLocale(Locale.of("en_US"));
 
         ArrayList<HashMap<String, Object>> studyListMap = new ArrayList();
 
@@ -620,7 +620,7 @@ public class SystemController {
 
     @RequestMapping(value = "/modules/webservices", method = RequestMethod.GET)
     public ResponseEntity<ArrayList<HashMap<String, Object>>> getWebServicesModule(HttpServletRequest request) throws Exception {
-        ResourceBundleProvider.updateLocale(new Locale("en_US"));
+        ResourceBundleProvider.updateLocale(Locale.of("en_US"));
 
         ArrayList<HashMap<String, Object>> studyListMap = new ArrayList();
         HttpSession session = request.getSession();
@@ -664,7 +664,7 @@ public class SystemController {
 
     @RequestMapping(value = "/modules/ruledesigner", method = RequestMethod.GET)
     public ResponseEntity<ArrayList<HashMap<String, Object>>> getRuleDesignerModule(HttpServletRequest request) throws Exception {
-        ResourceBundleProvider.updateLocale(new Locale("en_US"));
+        ResourceBundleProvider.updateLocale(Locale.of("en_US"));
 
         ArrayList<HashMap<String, Object>> studyListMap = new ArrayList();
         HttpSession session = request.getSession();
@@ -718,7 +718,7 @@ public class SystemController {
 
     @RequestMapping(value = "/modules/datamart", method = RequestMethod.GET)
     public ResponseEntity<ArrayList<HashMap<String, Object>>> getDatamartModule(HttpServletRequest request) throws Exception {
-        ResourceBundleProvider.updateLocale(new Locale("en_US"));
+        ResourceBundleProvider.updateLocale(Locale.of("en_US"));
 
         HttpSession session = request.getSession();
         session.removeAttribute("datamart");
@@ -763,7 +763,7 @@ public class SystemController {
 
     @RequestMapping(value = "/modules/auth", method = RequestMethod.GET)
     public ResponseEntity<ArrayList<HashMap<String, Object>>> getLdapModule(HttpServletRequest request) throws Exception {
-        ResourceBundleProvider.updateLocale(new Locale("en_US"));
+        ResourceBundleProvider.updateLocale(Locale.of("en_US"));
 
         ArrayList<HashMap<String, Object>> studyListMap = new ArrayList();
         HttpSession session = request.getSession();
@@ -809,7 +809,7 @@ public class SystemController {
 
     @RequestMapping(value = "/modules/messaging", method = RequestMethod.GET)
     public ResponseEntity<ArrayList<HashMap<String, Object>>> getMessagingModule(HttpServletRequest request) throws Exception {
-        ResourceBundleProvider.updateLocale(new Locale("en_US"));
+        ResourceBundleProvider.updateLocale(Locale.of("en_US"));
 
         HttpSession session = request.getSession();
         session.removeAttribute("messaging");
@@ -872,7 +872,7 @@ public class SystemController {
 
     @RequestMapping(value = "/filesystem", method = RequestMethod.GET)
     public ResponseEntity<HashMap> getFileSystem() throws Exception {
-        ResourceBundleProvider.updateLocale(new Locale("en_US"));
+        ResourceBundleProvider.updateLocale(Locale.of("en_US"));
         HashMap<String, Object> map = new HashMap<>();
 
         String filePath = CoreResources.getField("filePath");
@@ -917,7 +917,7 @@ public class SystemController {
 
     @RequestMapping(value = "/database", method = RequestMethod.GET)
     public ResponseEntity<HashMap> getDatabaseHealthCheck() throws Exception {
-        ResourceBundleProvider.updateLocale(new Locale("en_US"));
+        ResourceBundleProvider.updateLocale(Locale.of("en_US"));
         HashMap<String, Object> map = new HashMap<>();
         HashMap<String, String> mapRole = new HashMap<>();
 
